--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -10,7 +10,9 @@ libutils_la_SOURCES = threads.cpp \
 	log.cpp \
 	js_utils.hpp \
 	js_utils.cpp \
-	utils.hpp
+	utils.hpp \
+	res_manager.cpp \
+	res_manager.hpp
 
 libutils_la_CPPFLAGS = $(MOZJS_CFLAGS) -Wno-invalid-offsetof -z noexecstack
 libutils_la_LDFLAGS = -no-undefined $(MOZJS_LIBS)
