Port encoding.hpp to Windows
Use external win-iconv project to get a iconv(3) implementation on
Windows. The project is included as a git submodule under
`utils/win-iconv`. It contains a single C file that we compile directly
into the utils static library.

--- a/win/utils.vcxproj.filters
+++ b/win/utils.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="..\utils\utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\utils\win-iconv\win_iconv.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
