Add Win32 TCP server implementation
Things in this commit:

- Rough implementation of Win32-based TCP server that can handle multiple
  clients
- Resource loading on Windows (loadResourceWin32() function)
- narrow() and widen() functions to deal with UTF-16 wide strings

Open issues:

- JS resources in jsrdbg still missing
- Read and write commands in TCP server needs to be implemented
- Lots of testing

--- a/win/jsrdbg.vcxproj.filters
+++ b/win/jsrdbg.vcxproj.filters
@@ -42,7 +42,10 @@
     <ClCompile Include="..\src\protocol.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\tcp_protocol.cpp">
+    <ClCompile Include="..\src\tcp_protocol_win32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\js\js_resources.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -65,7 +68,10 @@
     <ClInclude Include="..\src\protocol.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\tcp_protocol.hpp">
+    <ClInclude Include="..\src\tcp_protocol_win32.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\js\js_resources.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
