--- a/win/jsrdbg.vcxproj.filters
+++ b/win/jsrdbg.vcxproj.filters
@@ -83,5 +83,17 @@
     <ClInclude Include="..\public\jsrdbg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="jsrdbg.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\src\js\module.js" />
+    <None Include="..\src\js\mozjs_dbg.js" />
   </ItemGroup>
 </Project>
