Add server version command
Add a server version command, that displays the version of the remote debugger.

That is usefull, because it provides an easy method to check if a potential problem is
caused by a too old remote debugger.

Now the cofigure script on linux and a prebuild-step in MS Visual Studio generate a file
named src/version.h containing a macro called JSRDBG_VERSION. This macro is defined by
the output of 'git describe --tags --always --dirty'

--- a/configure.ac
+++ b/configure.ac
@@ -100,5 +100,11 @@ check/js/Makefile
 check/Makefile
 ])
 
+#generate Version header
+echo "#ifndef VERSION_H" > src/version.h
+echo "#define VERSION_H" >> src/version.h
+echo "#define JSRDBG_VERSION \"$(git describe --abbrev=4 --dirty --always --tags)\"" >> src/version.h
+echo "#endif" >> src/version.h
+
 AC_OUTPUT
 
