--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - checkout
       - run: |
           apt-get update -qq
-          apt-get install build-essential autoconf libtool-bin libmozjs-24-dev libreadline-dev autoconf-archive -y
+          apt-get install build-essential autoconf autoconf-archive libtool-bin gettext pkg-config libmozjs-24-dev libreadline-dev -y
           autoreconf -i
           ./configure
           make && make check
